# Multithreaded-bruteforce-factorization

./: CMakeLists.txt  Factorizator.cpp  Factorizator.h  Program.cpp  Program.h  README.md  ThreadPool.cpp  ThreadPool.h  ThreadSafePriorityQueue.h  ThreadSafeQueue.h  Writer.cpp  Writer.h  main.cpp
